[tool.poetry]
name = "phink"
version = "0.2.0"
description = "Phink provides a convenient wrapper around Sphinx to make project documentation a breeze."
authors = ["sneakypete81 <sneakypete81@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/sneakypete81/clickshot"
keywords = ["documentation", "sphinx", "readthedocs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: HTML",
    "Framework :: Sphinx",
]

[tool.poetry.scripts]
phink = "phink.cli:main"

[tool.poetry.dependencies]
python = "^3.6"

livereload = "^2.6"
recommonmark = "^0.6.0"
sphinx = "^2.2"
sphinx_rtd_theme = "^0.4.3"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allows-prereleases = true, python = "^3.6"}
flake8 = "^3.7"
mypy = "^0.770"
pytest = "^5.4"
tox = "^3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
